--- a/ceg3707_practical2.ipynb
+++ b/ceg3707_practical2.ipynb
@@ -337,7 +337,7 @@
     "\n",
     "An InSAR interferogram was calculated using a pair of Sentinel-1 images from the 9th June 2015 and 4th July 2017 (Figure below from Wicks et al., 2020).\n",
     "\n",
-    "<img src=\"https://github.com/koulali/ceg3707/blob/main/img/fig3.svg?raw=true\" alt=\"Drawing\" style=\"width: 700px;\"/>\n",
+    "<img src=\"https://github.com/koulali/ceg3707/blob/main/img/fig3.png?raw=true\" alt=\"Drawing\" style=\"width: 700px;\"/>\n",
     "\n",
     "### Question 1:\n",
     "\n",
